Fixed single long word break in profile about section.

--- a/react-app/src/components/Profiles/ProfileDetailPage/ProfileDetailPage.css
+++ b/react-app/src/components/Profiles/ProfileDetailPage/ProfileDetailPage.css
@@ -95,6 +95,10 @@
     margin-bottom: 48px;
 }
 
+.profile-about-user {
+    word-break: break-word;
+}
+
 .profile-bottom-right {
     border-left: 1px solid #d9e1ec;
     margin-left: 24px;
